# aie-demo-backend

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6f989a43254e_create_scene_table.py
app/: db.py  framer.py  fs.py  main.py  pipeline.py  s3.py
app/api/routes/: admin.py  api.py  scene.py
app/core/: config.py  events.py  lock.py  retry.py
app/models/: api.py  db.py
app/services/: describer.py  emailer.py  imageeditor.py  prompter.py
app/services/templates/: email_template.jinja
docker/: entrypoint.sh
